Update CI pipeline.
CI tests now use the dev branch.
Client and server tests now occur in different parallel jobs.

--- a/ci/task_run_tests.yml
+++ b/ci/task_run_tests.yml
@@ -8,8 +8,8 @@ image_resource:
     tag: 3.1
 
 inputs:
-- name: resource-test
+- name: resource-repo
 
 run:
   path: dotnet
-  args: ["test", "resource-test/"]
+  args: ["test", ((test_path))]
