--- a/ci/test-pipeline.yml
+++ b/ci/test-pipeline.yml
@@ -5,7 +5,7 @@ resources:
     uri: https://github.com/mcchow/CSS432_21W_The-Game.git
     branch: ((branch))
     username: joshua-sterner
-    password: ((github-pw))
+    password: ((githubToken))
 
 jobs:
 - name: run-tests
