Fixed the TriviaQuestion message and the ChosenCard handler

--- a/TriviaGameServer/TriviaGameServer.csproj
+++ b/TriviaGameServer/TriviaGameServer.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="5.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\TriviaGameProtocol\TriviaGameProtocol.csproj" />
   </ItemGroup>
 
