--- a/TriviaGameServerTests/TriviaGameServerTests.csproj
+++ b/TriviaGameServerTests/TriviaGameServerTests.csproj
@@ -11,6 +11,9 @@
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1" />
     <PackageReference Include="coverlet.collector" Version="1.2.0" />
+	<None Update="xunit.runner.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	</None>
   </ItemGroup>
 
   <ItemGroup>
