Add protocol tests to CI pipeline, add Dockerfile.

--- a/ci/test-pipeline.yml
+++ b/ci/test-pipeline.yml
@@ -22,3 +22,7 @@ jobs:
       file: resource-repo/ci/task_run_tests.yml
       vars:
         test_path: "resource-repo/TriviaGameServerTests"
+    - task: run-protocol-tests
+      file: resource-repo/ci/task_run_tests.yml
+      vars:
+        test_path: "resource-repo/ProtocolTests"
