Update CI Pipeline, switch to trivia.joshuasterner.com.
Also switch to port 8087.

--- a/TriviaGame/TriviaGameClient.csproj
+++ b/TriviaGame/TriviaGameClient.csproj
@@ -6,7 +6,8 @@
     <TieredCompilation>false</TieredCompilation>
 	<PublishSingleFile>true</PublishSingleFile>
 	<SelfContained>true</SelfContained>
-	<PublishTrimmed>false</PublishTrimmed>
+    <PublishTrimmed>false</PublishTrimmed>
+    <RuntimeIdentifier>win-x64</RuntimeIdentifier>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationManifest>app.manifest</ApplicationManifest>
